--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <p align="center">Ali Haider </p>
-logo: /assets/img/passport size pic.jpg
+logo: /assets/img/passport size pic.png
 description:
   <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
